[package]
name = "xogue"
version = "0.1.0"
authors = ["ishidex2 <ishidex2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.xml-rs]
version = "0.8.3"

[dependencies.ron]
version = "0.6.4"

[dependencies.sdl2]
version = "0.34.3"
features = ["gfx"]

[dependencies.serde]
serde = "1.0.124"
